opam-version: "2.0"
name: "note"
synopsis: "Declarative events and signals for OCaml"
description: """\
Note is an OCaml library for functional reactive programming (FRP). It
provides support to program with time varying values: declarative
events and signals.

Note is distributed under the ISC license.

Homepage: http://erratique.ch/software/note"""
maintainer: "Daniel Bünzli <daniel.buenzl i@erratique.ch>"
authors: "The note programmers"
license: "ISC"
tags: ["reactive" "declarative" "signal" "event" "frp" "org:erratique"]
homepage: "https://github.com/dune-universe/notes.git"
bug-reports: "https://github.com/dbuenzli/note/issues"
depends: [
  "ocaml" {>= "4.08.0"}
  "dune"
]
build: [ "dune" "build" "-p" name "-j" jobs "@install" "@runtest" {with-test} ]
dev-repo: "git+https://github.com/dune-universe/note.git"
